syntax = "proto3";

package com.netflix.vssm;

option go_package = "stash.corp.netflix.com/ps/vssm/vssmpb";

service InternalService {
    rpc BootstrapSlave (BootstrapSlaveRequest) returns (BootstrapSlaveResponse);
    rpc SynchronizeState(SynchronizeStateRequest) returns (SynchronizeStateResponse);
    rpc SynchronizeStatePush(SynchronizeStatePushRequest) returns (SynchronizeStatePushResponse);
}

message BootstrapSlaveRequest {
    bytes attestation = 1;
}
message BootstrapSlaveResponse {
    bytes rpc_private_key = 1;
}

message SynchronizeStateRequest {
}
message SynchronizeStateResponse {
    repeated SymmetricKey symmetric_key = 1;
    repeated AsymmetricKey asymmetric_key = 2;
    repeated MacKey mac_key = 3;
}
message SynchronizeStatePushRequest {
    SynchronizeStateResponse synchronize_state_message = 1;
}
message SynchronizeStatePushResponse {
}

message SymmetricKey {
    string name = 1;
    // Milliseconds since epoch
    int64 created_at = 2;
    bytes key = 3;
}

message AsymmetricKey {
    string name = 1;
    // Milliseconds since epoch
    int64 created_at = 2;
    // E.g. RSA or EC
    string key_type = 3;
    // PKCS8 encoded bytes
    bytes key = 4;
}

message MacKey {
    string name = 1;
    // Milliseconds since epoch
    int64 created_at = 2;
    bytes key = 3;
}
